--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <label for="book_author">Book Author:</label>
           <input type="text" id="book_author" name="book_author" required>
           <label for="book_pages">Total Pages:</label>
-          <input type="number" id="book_pages" name="book_pages" required>
+          <input type="number" id="book_pages" name="book_pages" min=1 max=2000 required>
           <div class="form-read-checkbox">
             <label for="book_read">Have you read it:</label>
             <input type="checkbox" id="book_read" name="book_read">
